scss調整/封面頁字型等比大小/內頁哪片手機版放大

--- a/docs/app/cover-page/cover-page.component.html
+++ b/docs/app/cover-page/cover-page.component.html
@@ -10,9 +10,9 @@
       </div>
     </div>
     <div class="col-md-6 cover_txt_wrap-right">
-      <div class="h-100">
-        <p class="mb-3">潮SCRUM</p>
-        <p class="mb-3">SCRUM是什麼？能吃嗎？</p>
+      <div>
+        <p class="mb-3">潮SCRUM??</p>
+        <p class="mb-3">SCRUM是什麼？</p>
         <div routerLink="/intro" class="btn btn-round" type="button">
           立馬搞懂
         </div>
