--- a/docs/app/page1-intro/page1-intro.component.html
+++ b/docs/app/page1-intro/page1-intro.component.html
@@ -1,6 +1,6 @@
 <!-- 以下正式內容 -->
 <div class="container">
-  <div class="mainArea mx-5 px-4 py-4 my-5">
+  <div class="mainArea">
     <p class="mb-3">為什麼公司都在問：你熟 SCRUM 嗎？</p>
     <p class="mb-4">
       SCRUM
