--- a/docs/app/page3-pd-backlog/page3-pd-backlog.component.html
+++ b/docs/app/page3-pd-backlog/page3-pd-backlog.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="mainArea mx-5 my-5 px-4 py-4">
+  <div class="mainArea">
     <p class="mb-3">產品待辦清單（Product Backlog）</p>
     <p class="mb-4" style="padding-right: 5rem">
       在 Sprint 之前，還有一個很重要的工作就是，由 Product Owner 制定 Product
