--- a/docs/app/page5-retro/page5-retro.component.html
+++ b/docs/app/page5-retro/page5-retro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="mainArea mx-5 my-5 px-4 py-4">
+  <div class="mainArea">
     <p class="mb-3">Retrospective Meeting 的精神！</p>
     <p class="mb-4" >
       很重要的就是要「正面表述」，終極目標是為了讓下一次 sprint 能夠更順利進行、延續好的協作方式與默契！
