--- a/src/app/page7-the-end/page7-the-end.component.html
+++ b/src/app/page7-the-end/page7-the-end.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="col-md-6 cover_txt_wrap-right">
-      <div class="h-100">
+      <div class="d-flex flex-column flex-md-column align-items-center align-items-md-start">
         <p class="mb-3">恭喜你也熟 SCRUM 了</p>
         <p class="mb-3">下次老闆問的時候請說我超熟！</p>
         <button routerLink="/" class="btn btn-round" type="button">
