--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -18,4 +18,13 @@ header {
   text-align: left;
   margin-bottom: 0;
   color: #59597c;
+
+  @media (min-width: 576px) {
+    font-size: 24px;
+  }
+  @media (min-width: 768px) {
+    font-size: 20px;
+  }
+
+
 }
