--- a/src/app/page3-pd-backlog/page3-pd-backlog.component.html
+++ b/src/app/page3-pd-backlog/page3-pd-backlog.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="mainArea mx-5 my-5 px-4 py-4">
+  <div class="mainArea">
     <p class="mb-3">產品待辦清單（Product Backlog）</p>
     <p class="mb-4" style="padding-right: 5rem">
       在 Sprint 之前，還有一個很重要的工作就是，由 Product Owner 制定 Product
@@ -9,7 +9,7 @@
     <div class="row mb-4">
       <div class="col">
         <p class="mb-3">主要負責人員</p>
-        <div class="col-6 participant_card_wrap">
+        <div class="participant_card_wrap">
           <div class="d-flex">
             <img src="./assets/images/peer_icon.svg" alt="" />
             <div class="text_wrap">
