--- a/src/app/page6-retro-game/page6-retro-game.component.html
+++ b/src/app/page6-retro-game/page6-retro-game.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="mainArea mx-5 my-5 px-4 py-4">
+  <div class="mainArea">
     <p class="mb-3">有建設性的 Retrospective Meeting</p>
     <p class="mb-4">請選出相對適合的意見！</p>
     <div class="mb-5 round-1">
