--- a/src/scss/_public.scss
+++ b/src/scss/_public.scss
@@ -121,3 +121,30 @@ body {
     }
   }
 }
+
+
+
+.mainArea {
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0px 15px 25px rgba(45, 156, 219, 0.16);
+  font-family: "Noto Sans TC";
+  color: #59597c;
+  border-radius: 8px;
+  margin: 1rem;
+  margin-top: 3rem;
+  padding: 1.5rem;
+
+  @media (max-width: 576px) {
+
+    margin-top: 1.5rem;
+    padding: 1rem;
+  }
+
+}
+
+
+.participant_card_wrap{
+  div{
+    display:flex;
+  }
+}
