intro 頁面修改好

--- a/src/app/page1-intro/page1-intro.component.html
+++ b/src/app/page1-intro/page1-intro.component.html
@@ -7,19 +7,19 @@
       是目前數位產品開發常見的「工作模式」，從如何完成、進度控管、成果檢視一系列的操作指南。
     </p>
     <div class="row mb-3 option-cube-wrap">
-      <div class="col mx-3">
+      <div class="col mx-3 mb-3">
         <p>Planning Meeting</p>
         <p>規劃這一個 sprint 要做哪些任務才能達成目標</p>
       </div>
-      <div class="col mx-3">
+      <div class="col mx-3 mb-3">
         <p>Standup Meeting</p>
         <p>每天簡要彙報進度與接著要做的事情</p>
       </div>
-      <div class="col mx-3">
+      <div class="col mx-3 mb-3">
         <p>Review Meeting</p>
         <p>檢視任務完成的狀況與品質</p>
       </div>
-      <div class="col mx-3">
+      <div class="col mx-3 mb-3">
         <p>Retrospective Meeting</p>
         <p>提出做得好的地方以及可以改善的地方</p>
       </div>
@@ -34,22 +34,22 @@
     </div>
     <div class="mb-4">
       <p class="mb-3">參與人員</p>
-      <div class="row participant_card_wrap px-4">
-        <div class="col mx-4 d-flex">
+      <div class="row participant_card_wrap">
+        <div class="col card_intro">
           <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Product Owner</p>
             <p>產品經理、總負責人</p>
           </div>
         </div>
-        <div class="col mx-4 d-flex">
+        <div class="col card_intro">
           <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Scrum Master</p>
             <p>實踐 Scrum 流程的總教練</p>
           </div>
         </div>
-        <div class="col mx-4 d-flex">
+        <div class="col card_intro">
           <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Development Team</p>
