--- a/src/app/page3-pd-backlog/page3-pd-backlog.component.html
+++ b/src/app/page3-pd-backlog/page3-pd-backlog.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="mainArea">
     <p class="mb-3">產品待辦清單（Product Backlog）</p>
-    <p class="mb-4" style="padding-right: 5rem">
+    <p class="mb-4">
       在 Sprint 之前，還有一個很重要的工作就是，由 Product Owner 制定 Product
       Backlog，確定開發優先序，以利往後每個 Planning meeting
       都可以安排符合產品運營策略的工作項目
