--- a/src/app/page4-pd-flow/page4-pd-flow.component.html
+++ b/src/app/page4-pd-flow/page4-pd-flow.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <div class="step2_testArea mx-5 px-4 py-4 my-5">
+    <div class="step2_testArea mainArea">
         <p class="mb-3">產品待辦清單排排看！</p>
         <p class="mb-5">
             尊榮旅遊社即將推行線上下單業務，優化線上下單系統以利促銷業務順利進行是首要考量！請將正確的優先序拖曳至框框裡！
         </p>
-        <div class="mb-3">
-            <div class="row mb-5">
-                <div class="col-4 px-3 fttingArea">
+        <div class="pd-flow-box mb-3">
+            <div class="d-flex mb-5 justify-content-between">
+                <div class="fttingArea">
                     <!-- 這裡放選項 -->
                     <div cdkDropList #oneList="cdkDropList" [cdkDropListData]="one"
                         [cdkDropListConnectedTo]="[AllInList,oneList,twoList,threeList]"
@@ -38,12 +38,8 @@
                         </div>
                     </div>
 
-
-
-
-
                 </div>
-                <div class="col-3 px-4 imgArea">
+                <div class="imgArea">
                     <p>最優先</p>
                     <img src="./assets/images/priority_arrow.svg" alt="" />
                 </div>
@@ -56,8 +52,6 @@
                     <div class="coolJob-box" *ngFor="let item of AllIn" cdkDrag>
                         <h3>{{item.title}}</h3>
                         <p>{{item.content}}</p>
-
-
                     </div>
                 </div>
 
