--- a/src/app/page4-pd-flow/page4-pd-flow.component.scss
+++ b/src/app/page4-pd-flow/page4-pd-flow.component.scss
@@ -6,6 +6,9 @@
   
   .coolJob-box {
     padding: 20px 10px;
+    @media (max-width:768px){
+      padding: 10px;
+    }
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,13 +65,12 @@
 
 
   .fttingArea{
-    width: 35%;
+    width: 45%;
     min-width: 100px;
     margin: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 
 
     p{
@@ -78,13 +80,12 @@
 
 
     div{
-        // width: 100%;
-        min-width: 250px;
+        width: 100%;
         min-height:7rem ;
         height:inherit ;
         overflow: hidden;
         display: block;
-        
+        min-height: 10vh;
     }
 }
 
@@ -94,15 +95,11 @@
     flex-direction: column;
     justify-content: flex-start;
 
-
-
-
-
 }
 
 
 .item-group{
-  
+  width: 45%;
   min-height: 30px;
  
   
@@ -111,4 +108,10 @@
 
   div{margin:5px}
   
+}
+
+
+.pd-flow-box{
+  position: relative;
+
 }
