--- a/src/app/page5-retro/page5-retro.component.html
+++ b/src/app/page5-retro/page5-retro.component.html
@@ -6,22 +6,22 @@
     </p>
     <div class="mb-5">
       <p class="mb-3">參與人員</p>
-      <div class="row participant_card_wrap px-4">
-        <div class="col mx-4 d-flex">
+      <div class="row participant_card_wrap">
+        <div class="col card_intro">
           <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Product Owner</p>
             <p>產品經理、總負責人</p>
           </div>
         </div>
-        <div class="col mx-4 d-flex">
+        <div class="col card_intro">
           <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Scrum Master</p>
             <p>實踐 Scrum 流程的總教練</p>
           </div>
         </div>
-        <div class="col mx-4 d-flex">
+        <div class="col card_intro">
           <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Development Team</p>
@@ -35,7 +35,7 @@
     <p class="mb-3">推薦工具</p>
     <div class="col d-flex justify-content-center">
       <a href="https://www.atlassian.com/software/confluence" target="_blank">
-      <img src="./assets/images/confluence.svg" alt="">
+      <img style="width: 100%;" src="./assets/images/confluence.svg" alt="">
     </a>
     </div>
 
