--- a/src/app/page6-retro-game/page6-retro-game.component.scss
+++ b/src/app/page6-retro-game/page6-retro-game.component.scss
@@ -25,6 +25,7 @@
   .doingbetter_card_wrap {
     .doingbetter_card {
       margin-right: 1rem;
+      margin-bottom: 1rem;
       padding: 12px 16px;
       background: rgba(217, 217, 217, 0.2);
       border: 2px dashed rgba(0, 0, 0, 0.2);
