--- a/src/scss/_gameBox.scss
+++ b/src/scss/_gameBox.scss
@@ -1,9 +1,5 @@
 .step2_testArea {
-    background: rgba(255, 255, 255, 0.8);
-    box-shadow: 0px 15px 25px rgba(45, 156, 219, 0.16);
-    font-family: "Noto Sans TC";
-    color: #59597c;
-    border-radius: 8px;
+
     p:nth-child(1) {
       font-weight: 500;
       font-size: 20px;
@@ -14,9 +10,15 @@
       font-weight: 400;
       font-size: 16px;
       line-height: 28px;
+      @media (max-width: 768px){
+        line-height: 17px;
+      }
     }
   }
   .fttingArea {
+
+
+    
     div {
       height: 8.5rem;
       box-sizing: border-box;
@@ -27,6 +29,13 @@
   }
   
   .imgArea {
+    position: absolute;
+    left:calc(50% - 20px);
+    display: flex;
+    margin-top: -40px;
+
+    flex-direction: column;
+    align-items: center;
     p:nth-child(1) {
         font-family: 'Noto Sans TC';
         font-weight: 400;
@@ -34,12 +43,17 @@
         line-height: 28px;
         color: #59597C;
     }
+
+    img{
+      height: 40vh;
+      max-height: 400px;
+    }
   }
   
   .optionArea {
     div {
       padding: 12px 16px;
-      gap: 8px;
+      // gap: 8px;
       background: #83d1fd;
       border-radius: 4px;
       text-align: center;
