--- a/src/app/page4-pd-flow/page4-pd-flow.component.scss
+++ b/src/app/page4-pd-flow/page4-pd-flow.component.scss
@@ -15,7 +15,7 @@
     justify-content: flex-start;
     box-sizing: border-box;
     cursor: move;
-    max-width: 300px;
+    // max-width: 300px;
     max-height: 134px;
     font-size: 14px;
   }
